Skip state key request in offline demo setup.

Bug: 878122
Test: Run DemoSetupFRETest and manually.
Change-Id: Ic171d8f1f9609f62ae443dd69d2697f730f3cd75
Reviewed-on: https://chromium-review.googlesource.com/1198362
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Igor <igorcov@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591103}
Former-commit-id: 9915b168217a54f5c4f32de89e1a9b58d957a28b