chromeos/system/statistics_provider.h
@@ -16,6 +16,9 @@ namespace system {
 // Activation date key.
 CHROMEOS_EXPORT extern const char kActivateDateKey[];
 
+// The key that will be present in VPD if the device was enrolled in a domain
+// that blocks dev mode.
+CHROMEOS_EXPORT extern const char kBlockDevModeKey[];
 // The key that will be present in VPD if the device ever was enrolled.
 CHROMEOS_EXPORT extern const char kCheckEnrollmentKey[];
 
