chrome/browser/chromeos/login/demo_mode/demo_setup_controller_unittest.cc
@@ -23,6 +23,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/test/base/testing_browser_process.h"
 #include "chromeos/cryptohome/system_salt_getter.h"
 #include "chromeos/dbus/dbus_thread_manager.h"
+#include "chromeos/system/fake_statistics_provider.h"
 #include "components/policy/core/common/cloud/mock_cloud_policy_store.h"
 #include "testing/gmock/include/gmock/gmock.h"
 #include "testing/gtest/include/gtest/gtest.h"
@@ -112,6 +113,7 @@ class DemoSetupControllerTest : public testing::Test {
   base::test::ScopedTaskEnvironment scoped_task_environment_;
   ScopedTestingLocalState testing_local_state_;
   ScopedStubInstallAttributes test_install_attributes_;
+  system::ScopedFakeStatisticsProvider statistics_provider_;
 
   DISALLOW_COPY_AND_ASSIGN(DemoSetupControllerTest);
 };
